# SimpleCGI

./: README.md  SimpleCGI.slnx
Bruno/SimpleCGI/: Path serves C# exe.yml  Path serves C++ exe.yml  Path serves Python exe with forwardPaths.yml  Path serves Python exe.yml  Path serves directory.yml  Path serves exe under another directory.yml  Path serves static file with forwardPaths.yml  Path serves static file.yml  opencollection.yml  test.yml
SimpleCGI.Types/: CookieType.cs  RequestType.cs  ResponseType.cs
SimpleCGI.WebServer/: Executor.cs  Extensions.cs  Program.cs  Router.cs  SimpleCGI.WebServer.csproj  Sitemap.cs  publish.ps1
SimpleCGI.WebServer/wwwroot/: index.json
SimpleCGI.WebServer/wwwroot/cpp/: _simple.json
SimpleCGI.WebServer/wwwroot/csharp/: _simple.json
SimpleCGI.WebServer/wwwroot/exe/: _simple.json  test.py
SimpleCGI.WebServer/wwwroot/statichtml/: _simple.json  index.html
SimpleCGI.WebServer/wwwroot/statichtml/exe/: index.json  test.py
SimpleCGI.WebServer/wwwroot/testdir2/: _simple.json
libs/cpp/: .gitignore  CMakeLists.txt  generate_windows.ps1
libs/cpp/include/: simplecgi.h
libs/cpp/src/: entrypoint.cpp  simplecgi.cpp
libs/cpp/test/: test1.cpp
libs/csharp/: SimpleCGI.Client.csproj  SimpleCGIRequest.cs  SimpleCGIResponse.cs
libs/csharp_test/: Program.cs  csharp_test.csproj  publish.ps1
